# safe_regions

./: .gitignore  pyproject.toml  train.py
notebooks/: ood.ipynb
safe_regions/: hook.py  layers.py  pl_module.py  region.py
safe_regions/fixup_experiment/: fixup_resnet_cifar.py  pl_module.py
safe_regions/models/: resnet.py
