[tool.poetry]
name = "safe_regions"
version = "0.1.0"
description = ""
authors = ["Santiago <shpotes3@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.8.1"
torchvision = "^0.9.1"
tqdm = "^4.60.0"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.0.14"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
